--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,26 @@
 @import "tailwindcss";
 @plugin "daisyui";
 @tailwind utilities;
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(15px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.animate-fadeIn {
+  animation: fadeIn 4s ease forwards;
+}
